# wis2watch

./: .env.sample  .gitignore  Dockerfile  LEGAL.md  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  nginx.conf
wis2watch/: MANIFEST.in  pyproject.toml  requirements.txt
wis2watch/src/wis2watch/: __init__.py  manage.py  version.py
wis2watch/src/wis2watch/api/: apps.py  urls.py  views.py
wis2watch/src/wis2watch/config/: asgi.py  celery.py  urls.py  wsgi.py
wis2watch/src/wis2watch/config/settings/: base.py  dev.py  production.py
wis2watch/src/wis2watch/config/templates/: base.html
wis2watch/src/wis2watch/config/templates/wagtailadmin/: admin_base.html  base.html  home.html  login.html
wis2watch/src/wis2watch/core/: __init__.py  apps.py  cleanup.py  consumers.py  forms.py  models.py  mqtt.py  mqtt_client.py  stations.py  sync.py  tasks.py  views.py  viewsets.py  wagtail_hooks.py
wis2watch/src/wis2watch/core/management/commands/: ensure_monitoring.py  (+1 more)
wis2watch/src/wis2watch/core/migrations/: 0001_initial.py  0002_wis2node_verify_ssl.py
wis2watch/src/wis2watch/core/templatetags/: wis2watch_tags.py
wis2watch/src/wis2watch/home/: apps.py
wis2watch/src/wis2watch/monitoring/: apps.py  views.py  wagtail_hooks.py
wis2watch/src/wis2watch/monitoring/wis2watch-monitoring/: README.md  digest.txt  package-lock.json  package.json  vite.config.js
wis2watch/src/wis2watch/mqtt/: apps.py  client.py  service.py  tasks.py
wis2watch/src/wis2watch/utils/: version.py
wis2watch/src/wis2watch/ws/: apps.py  consumers.py  routers.py  routing.py
(+12 files in other folders)
